--- a/SisMaper/Views/ViewConfiguracoes.xaml
+++ b/SisMaper/Views/ViewConfiguracoes.xaml
@@ -25,7 +25,7 @@
     <Grid Margin="1,0,-1,0">
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="28,96,0,0"
+            Margin="28,108,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"
             Height="23"
@@ -33,14 +33,14 @@
         <TextBox
             Style="{StaticResource MahApps.Styles.TextBox}"
             HorizontalAlignment="Left"
-            Margin="125,91,0,0"
+            Margin="125,103,0,0"
             Text="{Binding Empresa.Razao_Social, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             VerticalAlignment="Top"
             Width="196" Height="30" UndoLimit="99" FontSize="14" />
 
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="28,138,0,0"
+            Margin="28,150,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"
             Height="23"
@@ -50,7 +50,7 @@
             Style="{StaticResource MahApps.Styles.TextBox}"
             Mask="00\.000\.000/0000-00"
             HorizontalAlignment="Left"
-            Margin="125,135,0,0"
+            Margin="125,147,0,0"
             IncludeLiteralsInValue="False"
             ValueDataType="{x:Type system:String}"
             Value="{Binding Empresa.CNPJ, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -58,7 +58,7 @@
             Width="196" Height="30" UndoLimit="99" FontSize="14" />
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="28,179,0,0"
+            Margin="28,191,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"
             Height="22"
@@ -66,13 +66,13 @@
         <PasswordBox
             x:Name="ConsumerKey"
             HorizontalAlignment="Left"
-            Margin="125,175,0,0"
+            Margin="125,187,0,0"
             VerticalAlignment="Top"
             mah:TextBoxHelper.SelectAllOnFocus="true"
             Width="196" Height="30" />
         <TextBlock
             HorizontalAlignment="Left"
-            Margin="28,221,0,0"
+            Margin="28,233,0,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"
             Height="24"
@@ -81,13 +81,13 @@
             x:Name="Token"
             Style="{StaticResource MahApps.Styles.PasswordBox}"
             HorizontalAlignment="Left"
-            Margin="125,217,0,0"
+            Margin="125,229,0,0"
             VerticalAlignment="Top"
             mah:TextBoxHelper.SelectAllOnFocus="true"
             Width="196" Height="30" />
         <TextBlock
             HorizontalAlignment="Right"
-            Margin="0,178,234,0"
+            Margin="0,190,234,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"
             Height="24"
@@ -95,13 +95,13 @@
         <PasswordBox
             x:Name="ConsumerSecret"
             HorizontalAlignment="Right"
-            Margin="0,175,31,0"
+            Margin="0,187,31,0"
             VerticalAlignment="Top"
             mah:TextBoxHelper.SelectAllOnFocus="true"
             Width="196" Height="30" />
         <TextBlock
             HorizontalAlignment="Right"
-            Margin="0,220,234,0"
+            Margin="0,232,234,0"
             TextWrapping="Wrap"
             VerticalAlignment="Top"
             Height="24"
@@ -109,7 +109,7 @@
         <PasswordBox
             x:Name="TokenSecret"
             HorizontalAlignment="Right"
-            Margin="0,217,31,0"
+            Margin="0,229,31,0"
             VerticalAlignment="Top"
             mah:TextBoxHelper.SelectAllOnFocus="true"
             Width="196" Height="30" />
@@ -122,11 +122,18 @@
             Margin="0,10,31,0" Width="123"/>
         <Button
             Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
+            Content="Alterar Naturezas"
+            PreviewMouseLeftButtonDown="AlterarNaturezas"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Margin="0,10,287,0" Width="131" />
+        <Button
+            Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Importar PEM"
             PreviewMouseLeftButtonDown="ImportPem"
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
-            Margin="0,10,173,0" Width="123" />
+            Margin="0,10,159,0" Width="123" />
         <Button
             Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Salvar"
