Add Fields in Client Address and Add await in Emit NF

--- a/SisMaper/Views/ViewPedido.xaml
+++ b/SisMaper/Views/ViewPedido.xaml
@@ -627,6 +627,7 @@
                 </Grid>
             </TabItem>
             <TabItem
+                Visibility="{Binding HasNotaFiscal, Converter={StaticResource BooleanToVisibilityConverter}}"
                 Header="  Nota Fiscal  ">
                 <Grid>
                     <DataGrid
