--- a/SisMaper/Views/Style/Style.xaml
+++ b/SisMaper/Views/Style/Style.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:templates="clr-namespace:SisMaper.Views.Templates"
+    xmlns:dialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
 
     xmlns:tools="clr-namespace:SisMaper.Tools">
     <Style
@@ -20,7 +21,6 @@
             </Setter.Value>
         </Setter>
     </Style>
-
     <tools:DecimalToRealString
         x:Key="DecimalToRealString" />
     <tools:PedidoStatusToBoolean
